# learning-cmake

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
cmake/: CompilerWarnings.cmake  Doxygen.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
src/: main.c
test/: test.c
